Fix overflow issue

--- a/css/style-sky-blue.css
+++ b/css/style-sky-blue.css
@@ -1,13 +1,8 @@
-/*
-  Theme Name: DevFolio
-  Theme URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-  Author: BootstrapMade.com
-  License: https://bootstrapmade.com/license/
-*/
-
-/*======================================
-//--//-->   STYLES GENERALES
-======================================*/
+html,
+body{
+width:100%;
+overflow-x:hidden;
+}
 
 body {
   background-color: #f5f5f5;
