--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+html,
+body{
+width:100%;
+overflow-x:hidden;
+}
+
 body {
   background-color: #ffffff;
   color: #4e4e4e;
